--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/cat.ico">
+  <meta name="description" content="psychology resume">
+  <meta name="author" content="eshie008">
 
-  <title>John Doe - Business Administration</title>
+  <title>Emily Shields - Psychology</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Emily Shields</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/emilyshields.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Emily Shields
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Psychology📚</div>
+        <p class="lead mb-4">I want to get a degree in psychology and hopefully become a psychiatrist<br><br>
 
-        Enter bio here<br><br>
+        I currently reside at UCR and will graduate in 2027<br><br>
 
-        Enter bio here
+        I am willingly to minor in buisness as well.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://linkedin.com/emilyks">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/emilys0509">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/eks">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:shieldsemily@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
+            <h3 class="mb-0">Baker</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • baked cakes and cookies<br> 
+              • had special recipes<br>
+              • gave them to the homeless<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">august 2021 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
+            <h3 class="mb-0">Smoothie Worker</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • worked at jamba juice<br>
+              • made all types of smoothies<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">March 2022 - june 2023</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
+            <h3 class="mb-0">Babysiter</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
+            • made kids food<br>
+            • took kids to their events<br>
+            • worked almost every day<br>
             • TA'd for over 400 students each academic quarter<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">may 9 2022 - july 8 2022</span>
           </div>
         </div>
 
@@ -152,33 +152,22 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
+            <div class="subheading mb-3">Masters of Psychology Administration</div>
             <div>MBA in International Business</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2023 - june 2027</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Psyhology Administration</div>
+            <div>Psych Systems</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2027 - May 2030</span>
           </div>
         </div>
 
@@ -191,7 +180,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/2.jpg" width="500px">
+            <img src="img/1.jpg" width="500px"><br>
+            <img src="img/3.jpg" width="500px">
+            <img src="img/4.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +191,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Emily Shields</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
